--- a/easy.css
+++ b/easy.css
@@ -130,7 +130,10 @@ p {
     opacity: 0.5;
 }
 .center {
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
 }
 button {
     font-size: 25px;
@@ -144,8 +147,17 @@ button {
 button:hover {
     background-color: rgb(239, 243, 223);
 }
-
-/* Rawr */
+#start {
+    display: block;
+    margin: 30px auto; 
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 8px;
+    border: none;
+    background-color: white;
+    color: black;
+    font-size: 25px;
+}
 .score-container {
     position: absolute;
     top: 100px; 
@@ -187,7 +199,6 @@ button:hover {
 }
 #game-over-text {
     margin-bottom: 20px;
-    margin-left: 8%;
 }
 #play-again {
     font-size: 1.5rem;
@@ -197,8 +208,7 @@ button:hover {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 200px;
-    margin-left: 0px;
+    margin-left: 30px;
 }
 #play-again:hover {
     background-color: rgb(239, 243, 223);
