--- a/hard.css
+++ b/hard.css
@@ -3,7 +3,7 @@ body {
     text-align: center;
     font-family: "Times New Roman", serif;
     margin-top: 100px;
-    background-image: url(space3.png);
+    background-image: url('../images/space3.png');
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -109,12 +109,19 @@ p {
     font-weight: normal;
     margin-bottom: 30px;
 }
+.turn-indicator {
+    font-size: 1.8rem;
+    color: white;
+    margin-bottom: 10px;
+    text-align: center;
+    transition: color 0.3s, transform 0.3s;
+}
 .board {
     display: grid;
     grid-template-columns: 200px 200px;
     gap: 10px;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 .panel {
     width: 200px;
