--- a/choice.css
+++ b/choice.css
@@ -1,1 +1,161 @@
+body {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      background-repeat: no-repeat;
+      background-attachment: fixed;   
+      color: white; 
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+      font-family: "Times New Roman", serif;
+      text-align: center;
+      background-image: url(space2.png);
+      background-size: cover;
+      background-position: center;
+      overflow-x: hidden;
+      overflow-y: hidden;
+}
 
+/* Header */
+.header {
+      position: relative; 
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 50px;
+      background-color: #000;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.container-1 {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+      align-items: center;
+}
+.nav-list {
+      list-style: none;
+      display: flex;
+      gap: 30px;
+      margin: 0;
+      padding: 0;
+}
+.nav-list a {
+      text-decoration: none;
+      color: #ffffff;
+      font-size: 20px;
+      font-weight: 700;
+      font-family: 'Exo 2', sans-serif !important;
+      text-transform: uppercase;
+      padding: 15px 10px;
+      letter-spacing: 2px;
+      position: relative;
+      transition: color 0.2s ease;
+}
+.nav-list a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -2px;
+      width: 0;
+      height: 3px;
+      background-color: #ff4655;
+      transition: width 0.3s ease;
+      border-radius: 5px;
+}
+.nav-list a:hover::after, .nav-list a:active::after {
+      width: 100%;
+      background-color: #ff4655;
+}
+.nav-list a:hover, #nav-active:hover{
+      color: #ff4651;
+}
+.nav-list a:active, #nav-active:active{
+      color: #ffffff;
+}
+#nav-active {
+      text-decoration: none;
+      color: #e73737;
+      font-size: 20px;
+		  font-weight: 700;
+      font-family: 'Exo 2', sans-serif !important;
+      text-transform: uppercase;
+      padding: 15px 10px;
+      letter-spacing: 2px;
+      position: relative;
+      transition: color 0.2s ease;
+}
+.actions {
+      display: flex;
+      right: 20px;
+      align-items: center;
+      gap: 10px;
+}
+
+/* Section */
+h1 {
+      color: #ffffff;
+      margin-top: 100px;
+      font-size: 2.5rem;
+}
+.container-2 {
+      margin-top: 100px;
+}
+button {
+      display: inline-block;
+      padding: 30px 30px;
+      margin: 50px;
+      font-size: 1.3rem;
+      font-weight: 550;
+      color: black;
+      border-radius: 5px;
+      border: none;
+      width: 50%;
+      transition: transform 0.3s;
+}
+button:hover {
+      opacity: 0.8;
+      transform: translateY(-10px);
+}
+.easy {
+      background-color: #ffffff;
+}
+.hard {
+      background-color: #fce79a;
+}
+
+/* Footer */
+.footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+      height: 150px;
+      margin-top: 20px;
+      padding-top: 10px;
+}
+.p-footer {
+      font-size: 1.5rem;
+      font-weight: normal;
+      margin-bottom: 30px;
+}
+.footer-info {
+      text-align: center;
+      align-items: center;
+}
+footer a {
+      color: white; 
+      text-decoration: none;
+      font-size: 1.5rem;
+      font-weight: normal;
+      margin-bottom: 30px;
+}
+.footer a:hover {
+      text-decoration: underline;
+      color: #e9ebfd;
+}
